[project]
name = "satkbl"
version = "0.1.5"
description = "Baselayer for use within the satk ecosystem"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/satkbl"]
